# nsproxy

./: .clang-format  .gitignore  CMakeLists.txt  README  common.h  direct.c  direct.h  dns.c  dns.h  fakedns.c  fakedns.h  hook.c  hook.h  http.c  http.h  loop.c  loop.h  lwipopts.h  main.c  memp.c  netif.c  nsproxy.1  socks.c  socks.h  sys.c
include/: lwipopts.h
include/arch/: cc.h  sys_arch.h
include/lwip/: inet.h  opt.h
include/lwip/priv/: sockets_priv.h
include/posix/: inet.h  sockets.h
ipv4/: icmp.c
lwip/: README  init.c  memp.c  netif.c  tcp.c  tcp_in.c  tcp_out.c  udp.c
lwip/include/: lwipopts.h
lwip/include/lwip/: arch.h  mem.h  memp.h  pbuf.h  sockets.h  tcp.h  udp.h
lwip/include/lwip/priv/: memp_priv.h  tcp_priv.h
lwip/ipv4/: ip4.c
lwip/ipv6/: icmp6.c  ip6.c  nd6.c
src/: common.h  core.c  core.h  direct.c  direct.h  dns.c  dns.h  hook.c  http.c  http.h  loop.c  loop.h  lwipopts.h  main.c  proxy.h  skcomm.c  skcomm.h  skops.h  skutils.c  skutils.h  socks.c  socks.h
tests/: README  conftest.py  test_auth_fail.py  test_auth_ok.py  test_basic_dns.py  test_basic_ipv6.py  test_basic_tcp.py  test_basic_udp.py  test_direct.py  test_dns_redir_tcp.py  test_dns_redir_udp.py  test_http.py  test_iperf3.py  test_socks5.py  test_tcp_halfclose.py  test_tcp_halfclose_cl.py  test_tcp_halfclose_sv.py  test_tcp_rst_cl.py  test_tcp_rst_sv.py
tests/conf/: 3proxy_auth.cfg  3proxy_noauth.cfg  coredns.conf  shadowsocks_http_auth.json  shadowsocks_local.json  shadowsocks_server.json  shadowsocks_socks5_auth.json  singbox.json  singbox_auth.json  singbox_noauth.json  v2ray.json  v2ray_auth.json  v2ray_noauth.json
tests/tools/: tcp_halfclose.py  tcp_halfclose_cl.py  tcp_halfclose_sv.py  tcp_pingpong.py  tcp_rst_cl.py  tcp_rst_sv.py  udp_pingpong.py
